<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/pantalla">

    <TextView android:text="@string/titulo" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/texto" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/texto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uno"
            android:id="@+id/radioButton1"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dos"
            android:id="@+id/radioButton2"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tres"
            android:id="@+id/radioButton3"
            android:checked="false" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descuentoo"
        android:id="@+id/textView"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/primero"
        android:id="@+id/checkBox1"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/segundo"
        android:id="@+id/checkBox2"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_below="@+id/checkBox1"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto"
        android:id="@+id/textoFinal"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/botonAplicar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aplicar"
        android:id="@+id/botonAplicar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/checkBox2" />

</RelativeLayout>
